--- a/build.properties
+++ b/build.properties
@@ -2,8 +2,8 @@
 project.name=robotlegs-framework
 
 #Version number for current Robotlegs and SwiftSuspenders releases
-robotlegs.ver.num=v1.5.2
-swift.suspenders.version=v1.6.0
+robotlegs.ver.num=v1.5.2s2
+swift.suspenders.version=v2.0.0b3
 project.name.versioned=${project.name}-${robotlegs.ver.num}
 swift.suspenders.name.versioned=SwiftSuspenders-${swift.suspenders.version}
 
